tests/conformance/invalid/projection_undeclared_source.svp
res_spec RS1 { context: ContextoClinico; mechanism: RevisionExperto; mapping: MapeoResolucion; }
let RR1 = resolve(U, with: RS1, context: Ctx1, mechanism: M1);
let X = E999.resolved_to;
